--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
          <h2>Timer: <span id="timer">0</span></h2>
       </div>
       </div>
+      <footer>
+        Developed with ❤️ by <a href="https://ashwinipandya.netlify.app"> Ashwini-Pandya</a>
+      </footer>
       
   
     <script src="timer.js"></script>
