--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
          <h2>Timer: <span id="timer">0</span></h2>
       </div>
       </div>
-      <footer>
+      <footer class="footer">
         Developed with ❤️ by <a href="https://ashwinipandya.netlify.app"> Ashwini-Pandya</a>
       </footer>
       
